--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/node": "^12.20.27",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.19",
+    "@types/react-router-dom": "^5.3.1",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "react": "^17.0.2",
